--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="consulting.html">View on GitHub</a>
+                        <li><a href="https://github.com/47deg/second-bridge">View on GitHub</a>
                         </li>
 
                     </ul>
@@ -56,7 +56,7 @@
         <div class="jumbotron text-center">
             <div class="container">
                 <h1>Functional programming in iOS made easy by bridging the gap between Swift and Scala.</h1>
-                <p><a class="btn btn-outline-inverse" href="#" role="button">Learn more</a>
+                <p><a class="btn btn-outline-inverse" href="https://github.com/47deg/second-bridge" role="button">Learn more</a>
                 </p>
             </div>
         </div>
@@ -140,7 +140,7 @@
                     <p>Second Bridge is Hancrafted by the <a href="http://www.47deg.com/">47 Degrees</a></p>
                 </div>
                 <div class="col-md-6">
-                    <p class="text-right"><a href="#">View on GitHub</a></p>
+                    <p class="text-right"><a href="https://github.com/47deg/second-bridge">View on GitHub</a></p>
                 </div>
             </div>
         </div>
