Fixed several typos in the texts - adjusted paragraphs - fixed sass file to be able to have li tags

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h3>Functional Programming in Swift</h3>
-                        <p>Functional Programming has a lot of key benefits that can improve your development process by avoiding side effects and providing referential transparency. Your code will be cleaner, safer, and easier to test. Our intention by creating this framework is to extend a great functional framework like <a href="https://github.com/typelift/Swiftz">Swiftz</a>, while bringing a lot of the syntax and features of the Scala language. We’re enjoying the benefits of Scala in our projects here in 47 Degrees for a while, and we’d love Second Bridge to be your gateway to Functional Programming in your iOS apps!</p>
+                        <p><b>Functional Programming</b> has a lot of key benefits that can improve your development process by avoiding side effects and providing referential transparency. Your code will be cleaner, safer, and easier to test. We decided to extend the <a href="https://github.com/typelift/Swiftz">Swiftz</a> framework to add a lot of the syntax and features of the <b>Scala</b> language to Swift. We’ve been enjoying the benefits of Scala in our projects here in <b>47 Degrees</b> for some years now, and we’d love <b>Second Bridge</b> to be your gateway to Functional Programming in your iOS apps!</p>
                     </div>
                     <div class="col-md-7">
                         <img class="img-responsive" src="img/image_functional_programming.png" alt="">
@@ -80,14 +80,14 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h3>New Features</h3>
-                        <p>Second Bridge comes packaged with a set of selected features from the Scala language:</p>
+                        <p><b>Second Bridge</b> comes packaged with a set of selected features from the Scala language:</p>
                         <ul>
                             <li>
-                                Immutable data-types that include Lists, Maps, Vectors, Stacks… and protocols derived from the Traversable and Iterable traits from Scala that will help you to build new data-types of your own in no time.
+                                Immutable data-types that include <b>Lists</b>, <b>Maps</b>, <b>Vectors</b>, <b>Stacks</b>… and protocols derived from the Traversable and Iterable traits from Scala that will help you to build your own data-types in no time.
                             </li>
-                            <li>Partial functions and algorithm operators based on them.</li>
+                            <li><b>Partial functions</b> and algorithm operators based on them.</li>
                             <li>
-                                Pattern matching even more powerful than Swift’s.
+                                <b>Pattern matching</b> even more powerful than Swift’s.
                             </li>
                         </ul>
                     </div>
@@ -102,7 +102,8 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h3>Playing with Playgrounds</h3>
-                        <p>We know that Functional Programming can be a little confusing for some developers used to the more tradicional imperative paradigm. So we wanted to help other iOS developers to learn how to use all these features. Playgrounds are a great tool for users to play with the new types and functions. Second Bridge ships with several Playgrounds showcasing several key features, so you can just start writing functional code and seeing results right away.</p>
+                        <p>We know that Functional Programming can be a little confusing for some developers used to the more tradicional imperative paradigm. So we wanted to help other iOS developers to learn how to use all these features.</p>
+                        <p><b>Playgrounds</b> are a great tool for users to play with the new types and functions. <b>Second Bridge</b> ships with several Playgrounds showcasing several key features, so you can just start writing functional code and seeing results right away.</p>
                     </div>
                     <div class="col-md-7">
                         <img class="img-responsive" src="img/Image_new_playing.png" alt="">
@@ -116,17 +117,17 @@
                     <div class="col-md-4">
                         <img src="img/icon_lambda.svg" alt="Functional programming">
                         <h4>Functional programming</h4>
-                        <p>Second Bridge gives you access to key features of functional programming like immutable data types, and a great set of pre-defined functions taken from the Scala language</p>
+                        <p>Get key features of functional programming like immutable data types, and a great set of features taken from the Scala language</p>
                     </div>
                     <div class="col-md-4">
                         <img src="img/icon_swift.svg" alt="Swift">
                         <h4>Swift</h4>
-                        <p>This project has been handcrafted 100% in Swift, with the goal of bringing functional programming to iOS developers whatever their level of expertise</p>
+                        <p>Handcrafted 100% in Swift, with the goal of bringing functional programming to iOS developers whatever their level of expertise</p>
                     </div>
                     <div class="col-md-4">
                         <img src="img/icon_opensource.svg" alt="Opensource">
                         <h4>Opensource</h4>
-                        <p>By opening its development, we hope that the community helps us to expand and improve this project. Second Bridge wants you!</p>
+                        <p>By opening its development, we hope that the community helps us to expand and improve this project.<br/>Second Bridge wants you!</p>
                     </div>
                 </div>
             </div>
@@ -136,7 +137,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>Second Bridge is Hancrafted by the <a href="http://www.47deg.com/">47 Degrees</a></p>
+                    <p>Second Bridge is handcrafted by <a href="http://www.47deg.com/">47 Degrees</a></p>
                 </div>
                 <div class="col-md-6">
                     <p class="text-right"><a href="https://github.com/47deg/second-bridge">View on GitHub</a></p>
